--- a/payment.html
+++ b/payment.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="rounded-bottom" style="background-color: #eee;">
-              <form action="http://labyrinthe-api.test/api/beta/mobile" method="post" class="card-body">
+              <form action="http://labyrinthe-api.io/api/beta/mobile" method="post" class="card-body">
                 <p class="mb-4">Tester votre premier payment</p>
 
                 <div data-mdb-input-init class="form-outline mb-3">
@@ -35,8 +35,8 @@
 
                 <!-- Hidden inputs -->
                 <div data-mdb-input-init class="form-outline mb-3">
-                  <input type="text" name="token" value="$2y$12$ngaXsXGwkrxpTAA.ubLXietv/BxZT1es3OziwIH88inGU4sGi6ivm" hidden />
-                  <input type="text" name="reference" value="azertyya-ssstan." hidden />
+                  <input type="text" name="token" value="_token" hidden />
+                  <input type="text" name="reference" value="_reference" hidden />
                 </div>
 
                 <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-block"
