Add a real route for betaMobile - 2024.05.20 at 11:57

--- a/payment.html
+++ b/payment.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="rounded-bottom" style="background-color: #eee;">
-              <form action="http://labyrinthe-api.io/api/beta/mobile" method="post" class="card-body">
+              <form action="https://payment.labyrinthe-rdc.com/api/beta/mobile" method="post" class="card-body">
                 <p class="mb-4">Tester votre premier payment</p>
 
                 <div data-mdb-input-init class="form-outline mb-3">
