--- a/payment.html
+++ b/payment.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Labyrinthe Payment</title>
 
+  <!-- Favicons -->
+  <link href="./img/labyrinthe-logo-without-name-green-orange.png" rel="icon">
+  <link href="./img/labyrinthe-logo-without-name-green-orange.png" rel="apple-touch-icon">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" />
   <link rel="stylesheet" href="css/mdb.min.css" />
